tests/trybuild/compile_fail/with_settings/bump_scope/into/minimum_alignment_decrease.stderr
error[E0080]: evaluation panicked: can't decrease minimum alignment when mutably borrowing with new settings
 --> src/raw_bump.rs
  |
  | /             assert!(
  | |                 NewS::MIN_ALIGN >= S::MIN_ALIGN,
  | |                 "can't decrease minimum alignment when mutably borrowing with new settings"
  | |             );
  | |_____________^ evaluation of `bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, bump_scope::settings::BumpSettings<2>>::ensure_scope_satisfies_settings::<bump_scope::settings::BumpSettings>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/raw_bump.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting");
  | |
  | |             assert!(
... |
  | |             );
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, BumpSettings<2>>::ensure_scope_satisfies_settings::<BumpSettings>`
 --> src/bump_scope.rs
  |
  |         self.raw.ensure_scope_satisfies_settings::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
